# PhieldsExperiments

./: .gitignore  .gitmodules  Deploy.ps1  INSTALL.md  LICENSE  README.md  environment.yml  pyproject.toml
.bonsai/: Bonsai.config  NuGet.config  setup.ps1
.config/: dotnet-tools.json
Arduino/: .gitignore  README.md
Arduino/StepperTest/: StepperTest.ino
bonsai/: Bonsai.config
calibration/: Calibration_all_1.yml  Calibration_all_2.yml  Calibration_all_3.yml  Camera_1.yaml  Camera_2.yaml  Camera_3.yaml  calibcamera.ipynb  calibcamera_3D.ipynb  calibcamera_3D_Aruco.ipynb  metadata.py
notebooks/: filter_unannotated_frames.ipynb
python/: DataLoaderSample.ipynb  phields_grant_jan_2025.py  pyproject.toml  requirements.txt  schema.py  setup.cmd  setup.ps1
src/bonsai/: Extensions.csproj  MotorControl.bonsai  Startup.bonsai  TrackingVideoFileTest.bonsai
worflows/3DReconstructionBenchmark/: CheckerboardCalibration.bonsai.layout
worflows/3DResconstruction/: 3dAcquisistion.bonsai
workflows/: README.md
workflows/3DReconstructionBenchmark/: 3dAcquisistion.bonsai.layout  CheckerboardCalibration.bonsai  OfficePrototype.bonsai  align.bonsai
workflows/Exp0/: Exp0-PHIELDS01.bonsai  Exp0-PHIELDS01.bonsai.layout  Extensions.csproj  PuffTests.bonsai  PuffTests.bonsai.layout  RigConfiguration.yaml  SystemStartup-PHIELDS01.bonsai  SystemStartup-PHIELDS01.cmd
workflows/HARP Tests/: LoomTest.bonsai
workflows/grant_jan_2025/: Extensions.csproj  MotorControl.bonsai  MultiShelter-PHIELDS01.bonsai  MultiShelter-PHIELDS01.bonsai.layout  RetrackingTrackingVideo.bonsai  (+2 more)
(+88 files in other folders)
