[project]
name = "swc-phields"
dynamic = ["version"]
requires-python = ">=3.11"
description = '''
    A environment for interfacing with acquired data from project PhieldsExperiments.
'''
readme = "README.md"
dependencies = [
  "dotmap",
  "harp-python>=0.3.0",
  "matplotlib",
  "numpy>=1.21.0, <2",
  "opencv-python",
  "pandas>=1.3",
  "swc-aeon==0.1.0"
]